feat: Enhanced Printful integration with comprehensive API support and robust fallbacks
- Added comprehensive Printful API client combining v1 and v2 APIs
- Implemented robust error handling and fallback mechanisms
- Enhanced variant selector with proper color detection and display
- Added cart functionality with multi-platform support
- Improved product details page with better variant information
- Added comprehensive logging for API debugging
- Enhanced product service with unified data conversion
- Updated cart service to handle rich variant data
- Added proper TypeScript interfaces for all new features

--- a/env.example
+++ b/env.example
@@ -1,10 +1,11 @@
-# Printify API Configuration
-# Get your API key from: https://printify.com/app/settings/api-keys
-PRINTIFY_API_KEY=your_printify_api_key_here
+# Printful API Configuration
+# Get your API key from: https://www.printful.com/dashboard/api
+PRINTFUL_API_KEY=your_printful_api_key_here
 
-# Your Printify Shop ID
-# You can find this in your Printify dashboard
-PRINTIFY_SHOP_ID=your_shop_id_here
+# Printify API Configuration
+# Get your API key from: https://printify.com/app/account/api-keys
+PRINTIFY_API_KEY=your_printify_api_key_here
+PRINTIFY_SHOP_ID=your_printify_shop_id_here
 
 # Next.js Configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000 
